# EliteX52Pro

./: LICENSE  README.md  default.config  elitex52pro.py  elitex52pro.py-backup  nohup.out  pyproject.toml  requirements.txt  silent-running.config  stop-elitex52pro.sh  tester.py
base/: x52-amber.sh  x52-default.sh  x52-green.sh  x52-minimal.sh  x52-red.sh
disabling/: cargo-off.sh  cooldown-off.sh  fsd-charging-off.sh  interdicted-off.sh  landing-off.sh  lights-off.sh  on-foot.sh  shift-off.sh  srv.sh  witchspace-off.sh
enabling/: cargo.sh  cooldown.sh  fsd-charging.sh  interdicted.sh  landing.sh  lights.sh  shift.sh  witchspace.sh
